# sdim

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  TODO.md  output.prof  profiling_results.txt  pyproject.toml  setup.cfg
.github/workflows/: docs.yml  publish.yml  publish_test.yml
Python/: circuit.py  gatedata.py  main_test.py  paulistring.py  program.py  tableau.py  tableau_simulator.py
docs/: index.html  sdim.html  search.js
docs/sdim/: circuit.html  circuit_io.html  diophantine.html  gatedata.html  program.html  random_circuit.html  tableau.html  unitary.html
docs/sdim/tableau/: dataclasses.html  tableau_composite.html  tableau_gates.html  tableau_prime.html
examples/: repetition_code.ipynb  steane_css.ipynb
sdim/: __init__.py  circuit.py  circuit_io.py  gatedata.py  program.py  random_circuit.py  sampler.py  unitary.py
sdim/tableau/: __init__.py  dataclasses.py  extended_tableau_simulator.py  tableau.py  tableau_gates.py  tableau_optimized.py  tableau_prime.py
src/: chp_parser.py  gate.py  gatedata.py  main.py  main_test.py  program.py  tableau_simulator.py  test.py  unitary.py
src/circuits/: css_steane.chp  css_steane_final.chp  ghz.chp  pauli_x_odd.chp  rand.chp  rand2.chp  rand3.chp  random_circuit.chp
src/profiling/: random_circuit.chp  random_circuit.py
src/sdim/: __init__.py  chp_parser.py  circuit.py  circuit_io.py  compound_gates.py  diophantine.py  gate.py  gatedata.py  paulistring.py  program.py  random_circuit.py  tableau.py  tableau_composite.py  tableau_gates.py  tableau_simulator.py  unitary.py
src/sdim/tableau/: __init__.py  composite.md  tableau_composite.py  tableau_gates.py  tableau_prime.py
src/simulation/: circuit.py  gate.py  gatedata.py  tableau.py  tableau_simulator.py
tests/: test_circuit.py  test_gate.py  test_gatedata.py  test_noise_and_io.py  test_pauli.py  test_program.py  test_reset.py  test_sampler.py  test_tableau.py  test_tomography.py
tests/statevector/: cirq_gates.py  test_tomography.py  tomography.py
tests/testdata/: simulation_data.json
