[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdim"
version = "0.2.0"
description = "A tableau Clifford simulator for qudits"
authors = [
  { name = "Steven Nguyen", email = "steven.n.nguyen@rutgers.edu" },
]
urls = { 
  "Homepage" = "https://events555.github.io/sdim/sdim.html",
  "Repository" = "https://github.com/events555/sdim",
  "Documentation" = "https://events555.github.io/sdim/sdim.html"
}
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["quantum computing", "Clifford simulator", "qudits"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "sympy",
  "cirq",
  "pdoc",
  "Diophantine",
]


[project.optional-dependencies]
test = ["cirq"]
