[tool.poetry]
name = "sdim"
version = "1.0.0"
description = "A tableau Clifford simulator for qudits"
authors = ["Steven Nguyen <steven.n.nguyen@rutgers.edu>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["quantum computing", "Clifford simulator", "qudits"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
Homepage = "https://events555.github.io/sdim/sdim.html"
Repository = "https://github.com/events555/sdim"
Documentation = "https://events555.github.io/sdim/sdim.html"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "*"
sympy = "*"
cirq = "*"
pdoc = "*"
Diophantine = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
