[tool.poetry]
name = "sdim"
version = "1.2.0"
description = "A tableau Clifford simulator for qudits"
authors = ["Steven Nguyen <steven.n.nguyen@rutgers.edu>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["quantum computing", "Clifford simulator", "qudits"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
Homepage = "https://events555.github.io/sdim/sdim.html"
Repository = "https://github.com/events555/sdim"
Documentation = "https://events555.github.io/sdim/sdim.html"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.25.0"
sympy = ">=1.12.1"
cirq = ">=1.0.0"
Diophantine = "*"

[tool.poetry.dev-dependencies]
pdoc = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
